traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:1: error: value unary_! is not a member of Unit
override def run() {baisseBrosse();var y=0; while(!a()){ {if (estFaceMur() && y==0){gauche();avance();gauche();y=1};if(estFaceMur()&& y==1){droite();avance();droite();y=0};else {avance()}};baisseBrosse()
                                                  ^Snake:5: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
def a(){if (getDirection()==Direction.EST){gauche();if(estFaceMur()){droite();return true} else {droite();return false}};return false} 
                                                                                     ^Snake:5: warning: enclosing method a has result type Unit: return value discarded
def a(){if (getDirection()==Direction.EST){gauche();if(estFaceMur()){droite();return true} else {droite();return false}};return false} 
                                                                              ^Snake:5: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
def a(){if (getDirection()==Direction.EST){gauche();if(estFaceMur()){droite();return true} else {droite();return false}};return false} 
                                                                                                                 ^Snake:5: warning: enclosing method a has result type Unit: return value discarded
def a(){if (getDirection()==Direction.EST){gauche();if(estFaceMur()){droite();return true} else {droite();return false}};return false} 
                                                                                                          ^Snake:5: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
def a(){if (getDirection()==Direction.EST){gauche();if(estFaceMur()){droite();return true} else {droite();return false}};return false} 
                                                                                                                                ^Snake:5: warning: enclosing method a has result type Unit: return value discarded
def a(){if (getDirection()==Direction.EST){gauche();if(estFaceMur()){droite();return true} else {droite();return false}};return false} 
                                                                                                                         ^